Configurando de nuevo .gitignore

--- a/ui/sales.ui
+++ b/ui/sales.ui
@@ -545,7 +545,7 @@
           <property name="geometry">
            <rect>
             <x>0</x>
-            <y>0</y>
+            <y>-309</y>
             <width>824</width>
             <height>823</height>
            </rect>
@@ -923,7 +923,7 @@
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Ubuntu'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'DejaVu Sans'; font-size:12pt;&quot;&gt;&lt;br /&gt;&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-family:'Ubuntu';&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                 </property>
                 <property name="acceptRichText">
                  <bool>false</bool>
@@ -960,6 +960,9 @@ p, li { white-space: pre-wrap; }
                   </property>
                   <property name="maximum">
                    <number>999999999</number>
+                  </property>
+                  <property name="singleStep">
+                   <number>10</number>
                   </property>
                  </widget>
                 </item>
@@ -1459,6 +1462,9 @@ p, li { white-space: pre-wrap; }
                   </property>
                   <property name="maximum">
                    <number>999999999</number>
+                  </property>
+                  <property name="singleStep">
+                   <number>10</number>
                   </property>
                  </widget>
                 </item>
