--- a/ui/login.ui
+++ b/ui/login.ui
@@ -68,7 +68,7 @@
         </font>
        </property>
        <property name="text">
-        <string/>
+        <string>leonardo</string>
        </property>
       </widget>
      </item>
@@ -91,7 +91,7 @@
         <string/>
        </property>
        <property name="text">
-        <string/>
+        <string>123</string>
        </property>
       </widget>
      </item>
